--- a/catalog.html
+++ b/catalog.html
@@ -270,5 +270,42 @@
         </div>
       </footer>
     </div>
+    <div class="items-basket modal-basket">
+      <ul class="items-list">
+        <li class="item1">
+          <img
+            src="./img/basket-ice1.png"
+            alt="Пломбир с апельсиновым джемом"
+            width="33"
+            height="33"
+          />
+          <p>Пломбир с апельсиновым джемом</p>
+          <p>1,5 кг х <span>200 руб.</span></p>
+          <p>300 руб.</p>
+        </li>
+        <li class="item2">
+          <img
+            src="./img/basket-ice2.png"
+            alt="Клубничный пломбир с присыпкой из белого шоколада"
+            width="33"
+            height="33"
+          />
+          <p>Клубничный пломбир с присыпкой <br/>из белого шоколада</p>
+          <p>1,5 кг х <span>300 руб.</span></p>
+          <p>450 руб.</p>
+        </li>
+      </ul>
+      <p class="total">Итого: 750 руб.</p>
+      <a class="basket-list-button" href="#">Оформить заказ</a>
+    </div>
+    <div class="modal-list">
+      <ul class="list">
+        <li class="current-item-list"><a class="current-link" href="#">по популярности</a></li>
+        <li><a href="#">сначала недорогие</a></li>
+        <li><a href="#">сначала дорогие</a></li>
+        <li><a href="#">по жирности</a></li>
+      </ul>
+    </div>
+    <script src="./catalog.js"></script>
   </body>
 </html>
