--- a/index.html
+++ b/index.html
@@ -68,8 +68,16 @@
               type="button"
               aria-label="Первый слайд"
             ></button>
-            <button class="second-slide-btn" type="button" aria-label="Второй слайд"></button>
-            <button class="third-slide-btn" type="button" aria-label="Третий слайд"></button>
+            <button
+              class="second-slide-btn"
+              type="button"
+              aria-label="Второй слайд"
+            ></button>
+            <button
+              class="third-slide-btn"
+              type="button"
+              aria-label="Третий слайд"
+            ></button>
           </div>
         </section>
         <section class="banners">
