docs: version update

--- a/index.html
+++ b/index.html
@@ -44,18 +44,33 @@
         <section class="slider">
           <ul class="slider-list">
             <li class="slider-item slide first-slide slide-current">
+              <img
+                class="slider-img"
+                src="./img/slider-img-1.png"
+                alt="Крем-брюле и пломбир"
+              />
               <h3 class="slide-title">
                 Крем-брюле и пломбир<br />с малиновым джемом
               </h3>
               <a class="button slide-button" href="#">Давайте оба!</a>
             </li>
             <li class="slider-item slide second-slide">
+              <img
+                class="slider-img"
+                src="./img/slider-img-2.png"
+                alt="Шоколадный пломбир и лимонный сорбет"
+              />
               <h3 class="slide-title">
                 Шоколадный пломбир<br />и лимооный сорбет
               </h3>
               <a class="button slide-button" href="#">Давайте оба!</a>
             </li>
             <li class="slider-item slide third-slide">
+              <img
+                class="slider-img"
+                src="./img/slider-img-3.png"
+                alt="Пломбир и клубничный щербет"
+              />
               <h3 class="slide-title">
                 Пломбир с помадкой<br />и клубничный щербет
               </h3>
@@ -64,17 +79,17 @@
           </ul>
           <div class="slider-controls">
             <button
-              class="first-slide-btn current"
+              class="first-slide-btn current slide-btn"
               type="button"
               aria-label="Первый слайд"
             ></button>
             <button
-              class="second-slide-btn"
+              class="second-slide-btn slide-btn"
               type="button"
               aria-label="Второй слайд"
             ></button>
             <button
-              class="third-slide-btn"
+              class="third-slide-btn slide-btn"
               type="button"
               aria-label="Третий слайд"
             ></button>
