--- a/catalog.html
+++ b/catalog.html
@@ -170,84 +170,144 @@
         </section>
         <div class="goods">
           <div class="item">
-            <img src="./img/lemon.png" alt="лимонное мороженое" />
+            <img
+              src="./img/lemon.png"
+              width="266"
+              height="267"
+              alt="лимонное мороженое"
+            />
             <p class="item-text">
               Сливочное с апельсиновым джемом и цитрусовой стружкой
             </p>
             <p class="item-cost">310₽<span class="kilogram">/кг</span></p>
+            <button class="item-button">Быстрый просмотр</button>
           </div>
           <div class="item">
-            <img src="./img/coffe.png" alt="кофейное мороженое" />
+            <img
+              src="./img/coffe.png"
+              width="266"
+              height="267"
+              alt="кофейное мороженое"
+            />
             <p class="item-text">Сливочно-кофейное с кусочками шоколада</p>
             <p class="item-cost">380₽<span class="kilogram">/кг</span></p>
+            <button class="item-button">Быстрый просмотр</button>
           </div>
           <div class="item">
-            <img src="./img/strawberry.png" alt="клубничное мороженое" />
+            <img
+              src="./img/strawberry.png"
+              width="266"
+              height="267"
+              alt="клубничное мороженое"
+            />
             <p class="item-text">
               Сливочно-клубничное с присыпкой из белого шоколада
             </p>
             <p class="item-cost">355₽<span class="kilogram">/кг</span></p>
+            <button class="item-button">Быстрый просмотр</button>
           </div>
           <div class="item">
-            <img src="./img/creme-brulee.png" alt="крем-брюле" />
+            <img
+              src="./img/creme-brulee.png"
+              width="266"
+              height="267"
+              alt="крем-брюле"
+            />
             <p class="item-text">
               Сливочное крем-брюле с карамельной подливкой
             </p>
             <p class="item-cost">415₽<span class="kilogram">/кг</span></p>
+            <button class="item-button">Быстрый просмотр</button>
           </div>
           <div class="item">
-            <img src="./img/21.png" alt="сливочное с брусничным джемом" />
+            <img
+              src="./img/21.png"
+              width="266"
+              height="267"
+              alt="сливочное с брусничным джемом"
+            />
             <p class="item-text">Сливочное с брусничным джемом</p>
             <p class="item-cost">325₽<span class="kilogram">/кг</span></p>
+            <button class="item-button">Быстрый просмотр</button>
           </div>
           <div class="item">
             <img
               src="./img/22.png"
+              width="266"
+              height="267"
               alt="сливочно-черничное с цельными ягодами"
             />
             <p class="item-text">
               Сливочно-черничное с цельными ягодами черники
             </p>
             <p class="item-cost">410₽<span class="kilogram">/кг</span></p>
+            <button class="item-button">Быстрый просмотр</button>
           </div>
           <div class="item">
             <img
               src="./img/23.png"
+              width="266"
+              height="267"
               alt="сливочно-лимонное с карамельной присыпкой"
             />
             <p class="item-text">Сливочно-лимонное с карамельной присыпкой</p>
             <p class="item-cost">375₽<span class="kilogram">/кг</span></p>
+            <button class="item-button">Быстрый просмотр</button>
           </div>
           <div class="item">
-            <img src="./img/24.png" alt="сливочное с шоколадной стружкой" />
+            <img
+              src="./img/24.png"
+              width="266"
+              height="267"
+              alt="сливочное с шоколадной стружкой"
+            />
             <p class="item-text">Сливочное с шоколадной стружкой</p>
             <p class="item-cost">320₽<span class="kilogram">/кг</span></p>
+            <button class="item-button">Быстрый просмотр</button>
           </div>
           <div class="item">
             <img
               src="./img/31.png"
+              width="266"
+              height="267"
               alt="сливочно-ванильное с кусочками шоколада"
             />
             <p class="item-text">Сливочно-ванильное с кусочками шоколада</p>
             <p class="item-cost">440₽<span class="kilogram">/кг</span></p>
+            <button class="item-button">Быстрый просмотр</button>
           </div>
           <div class="item">
-            <img src="./img/32.png" alt="сливочное с ментоловым сиропом" />
+            <img
+              src="./img/32.png"
+              width="266"
+              height="267"
+              alt="сливочное с ментоловым сиропом"
+            />
             <p class="item-text">Сливочноe с ментоловым сиропом</p>
             <p class="item-cost">435₽<span class="kilogram">/кг</span></p>
+            <button class="item-button">Быстрый просмотр</button>
           </div>
           <div class="item">
             <img
               src="./img/33.png"
+              width="266"
+              height="267"
               alt="сливочное с кусочками чёрного шоколада"
             />
             <p class="item-text">Сливочное с кусочками черного шоколада</p>
             <p class="item-cost">355₽<span class="kilogram">/кг</span></p>
+            <button class="item-button">Быстрый просмотр</button>
           </div>
           <div class="item">
-            <img src="./img/34.png" alt="сливочное с мятным сиропом" />
+            <img
+              src="./img/34.png"
+              width="266"
+              height="267"
+              alt="сливочное с мятным сиропом"
+            />
             <p class="item-text">Сливочное с мятным сиропом</p>
             <p class="item-cost">420₽<span class="kilogram">/кг</span></p>
+            <button class="item-button">Быстрый просмотр</button>
           </div>
         </div>
       </main>
@@ -290,7 +350,7 @@
             width="33"
             height="33"
           />
-          <p>Клубничный пломбир с присыпкой <br/>из белого шоколада</p>
+          <p>Клубничный пломбир с присыпкой <br />из белого шоколада</p>
           <p>1,5 кг х <span>300 руб.</span></p>
           <p>450 руб.</p>
         </li>
@@ -300,7 +360,9 @@
     </div>
     <div class="modal-list">
       <ul class="list">
-        <li class="current-item-list"><a class="current-link" href="#">по популярности</a></li>
+        <li class="current-item-list">
+          <a class="current-link" href="#">по популярности</a>
+        </li>
         <li><a href="#">сначала недорогие</a></li>
         <li><a href="#">сначала дорогие</a></li>
         <li><a href="#">по жирности</a></li>
