--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 alt="Шоколадный пломбир и лимонный сорбет"
               />
               <h3 class="slide-title">
-                Шоколадный пломбир<br />и лимооный сорбет
+                Шоколадный пломбир<br />и лимонный сорбет
               </h3>
               <a class="button slide-button" href="#">Давайте оба!</a>
             </li>
